--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,11 @@
 {
-  "trailingComma": "es5",
-  "tabWidth": 4,
-  "semi": false,
   "singleQuote": true,
-  "useTabs": false
+  "printWidth": 120,
+  "useTabs": false,
+  "tabWidth": 2,
+  "semi": true,
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "arrowParens": "avoid",
+  "endOfLine": "auto"
 }
